--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 .App {
   text-align: center;
   padding: 20px;
-  background: linear-gradient(to rigth, orange,#ffcc00,orange);
   min-height: 100vh;
 
 }
@@ -16,7 +15,7 @@
 .controls {
   display: flex;
   flex-direction: column;
-  gap: 10px; /* Espaçamento entre os campos e botões */
+  gap: 10px; 
 }
 
 table {
